# Predicao-Fenotipica

./: .gitignore  README.md  environment.yml  requirements.txt
pibic/: pyproject.toml
pibic/notebooks/: exploratory_data_analysis.ipynb
pibic/src/notebooks/: exploratory_data_analysis.ipynb
pibic/src/pibic/: extract.py  load.py  main.py  transform.py
src/: extract.py  load.py  main.py  transform.py
