[project]
name = "pibic"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Oliveira",email = "robson.oficial13@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "supabase (>=2.24.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "scikit-learn (>=1.7.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pibic", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
